--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>AEUGH</h1>
+<h1>Rei's Really Shitty Tropical Cyclone Scaling System (RRSTCSS)</h1>
+ <form action="/generate.php">
+  <label for="wind">Wind Speed (MPH):</label>
+  <input type="number" id="wind" name="wind"><br><br>
+  <label for="pressure">Pressure:</label>
+  <input type="number" id="pressure" name="pressure"><br><br>
+  <input type="submit" value="Submit">
+</form> 
